Some javadocs + CI